<resources>
    <string name="app_name">CodeDelta</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Tutoring Categories strings, spinners-->
    <!-- Spinner 1 Level (dummy values for now) -->
    <string-array name="location">
        <item>Arlington TX</item>
        <item>Dallas TX</item>
        <item>Tyler TX</item>
    </string-array>

    <!-- Spinner 2 Level -->
    <string-array name="level">
        <item>Elementary</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>University</item>
    </string-array>

    <!-- Spinner 2 Level (Not an exhaustive list yet) -->
    <string-array name="category">
        <item>Math</item>
        <item>Science</item>
        <item>Language</item>
        <item>Art</item>
        <item>History</item>
        <item>Writing</item>
    </string-array>

    <!-- payment strings-->
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_submit">Submit</string>
    <string name="enter_price">Enter dollar amount:</string>
    <string name="empty_str"> </string>
    <string name="invalid_payment">Error: Amounts do not match.</string>


    <string-array name="payment_array">
        <item>Bob Burnsmith $5.00</item>
        <item>Eliza Thornberry $3.11</item>
        <item>Steven Bowsmith $21.48</item>
    </string-array>
    <string name="title_activity_current__appointments">Current_Appointments</string>
    <string name="title_activity_appointments">AppointmentsActivity</string>
    <string name="title_activity_current_appointments">CurrentAppointmentsActivity</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="new_user_register">New user? Register</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="phone">0987654321</string>
    <string name="fname">fname</string>
    <string name="lname">lname</string>
    <string name="dob">10/10/1980</string>
    <string name="name">name</string>
    <string name="CourseList">CourseList</string>
    <string name="searchClass">SearchClass</string>
    <string name="title_activity_currentappointments2">Currentappointments2Activity</string>
    <string name="cancel">Cancel</string>
    <string name="Guest">Continue as Guest</string>
    <string name="new_user">Register</string>
    <string name="forgot_pswd">Fogot your password?</string>
    <string name="Request">Request an Appointment</string>
    <string name="Send_msg">Send message</string>
    <string name="Rating">Rating</string>
    <string name="check_app">Check App</string>
    <string name="personal_tutoring_app">Personal Tutoring App</string>
    <string name="developers">Developers</string>
    <string name="Appointment">Appointment</string>
    <!---->
    <string-array name="tutors">
        <item>Jon</item>
        <item>Chris</item>
    </string-array>
    <string-array name="appointments">
        <item>Monday 2pm Arlington</item>
        <item>Tuesday 3:30pm Dallas</item>
    </string-array>


</resources>
