
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sleek"

    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.pc.codedelta.LoginActivity">

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        app:srcCompat="@drawable/frogtut" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:hint="             username"

        android:inputType="text"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="             password"
        android:layout_marginBottom="50dp"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/greybtn"
        android:text="login"
        android:textSize="25dp" />

    <TextView

        android:id="@+id/tvRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="35dp"
        android:text="@string/new_user"
        android:textColor="#00ffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:text="@string/forgot_pswd"
        android:textColor="#00ff00"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGuest"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Guest"
        android:textColor="#00ff00" />

</LinearLayout>

